--- a/custom_components/fourheat/manifest.json
+++ b/custom_components/fourheat/manifest.json
@@ -1,11 +1,11 @@
 {
-  "domain": "4heat",
-  "version": "0.6.0",
-  "name": "4Heat Stove",
-  "documentation": "https://github.com/zaubererty/homeassistant-4heat",
+  "domain": "fourheat",
+  "name": "4heat",
+  "integration_type": "device",
   "config_flow": true,
-  "dependencies": [],
-  "codeowners": ["@zaubererty"],
+  "documentation": "https://www.home-assistant.io/integrations/4heat",
   "requirements": [],
+  "dependencies": [],
+  "codeowners": ["@zaubererty", "@anastas78"],
   "iot_class": "local_polling"
 }
